<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_player_1_name">Enter Player 1 Name</string>
    <string name="player_1">Player 1:</string>
    <string name="player_2">Player 2:</string>
    <string name="enter_player_2_name">Enter Player 2 Name</string>
    <string name="start_btn">Start</string>
    <string name="rounds">Rounds</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="winner_image">Winner Image</string>
    <string name="rematch">Rematch</string>
    <string name="home">Home</string>
</resources>