<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tic_tac_toe.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_1"
            android:layout_gravity="start"
            android:textSize="18sp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/player1ET"
            android:textSize="18sp"
            android:hint="@string/enter_player_1_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_2"
            android:layout_gravity="start"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/player2ET"
            android:textSize="18sp"
            android:hint="@string/enter_player_2_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rounds:"
                android:layout_gravity="center_vertical"
                android:textSize="18sp" />

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numRounds"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:id="@+id/rb1"
                    android:checked="true" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3"
                    android:id="@+id/rb3" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5"
                    android:id="@+id/rb5" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_7"
                    android:id="@+id/rb7" />

            </RadioGroup>

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rounds"
                android:id="@+id/numRoundET"
                android:importantForAutofill="no"
                android:inputType="number"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startButton"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:text="@string/start_btn"/>

    </LinearLayout>

</layout>