<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tic_tac_toe.GameOverFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:src="@drawable/you_win"
            android:contentDescription="@string/winner_image" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/winnerTv"
            android:textSize="26sp"
            android:textAlignment="center"
            tools:text="Player 1 won the game."/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rematch"
            android:textSize="18sp"
            android:id="@+id/playAgainBtn" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="18sp"
            android:id="@+id/homeBtn" />

    </LinearLayout>

</layout>